Bug 422354 - Fails to build with Qt 5.9
Summary: Fails to build with Qt 5.9
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.3.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-02 06:59 UTC by Wolfgang Bauer
Modified: 2020-06-02 16:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2020-06-02 06:59:24 UTC
Compiler error:
/home/abuild/rpmbuild/BUILD/tellico-3.3.1/src/document.cpp: In constructor 'Tellico::Data::Document::Document()':
/home/abuild/rpmbuild/BUILD/tellico-3.3.1/src/document.cpp:64:21: error: 'class QTimer' has no member named 'callOnTimeout'
   m_loadImagesTimer.callOnTimeout(this, &Document::slotLoadAllImages);
                     ^~~~~~~~~~~~~

QTimer::callOnTimeOut() only exists since Qt 5.12 according to the documentation.
Comment 1 Wolfgang Bauer 2020-06-02 07:01:24 UTC
Quoting from the docs:
This method is provided for convenience. It's equivalent to calling QObject::connect(timer, &QTimer::timeout, context, slot, connectionType).

So should be easy to fix.
Comment 2 Wolfgang Bauer 2020-06-02 15:21:21 UTC
Git commit ac8740fd9b4042af476fcf8dbb91c7d212d143e4 by Wolfgang Bauer.
Committed on 02/06/2020 at 15:12.
Pushed by wbauer into branch '3.3'.

Fix compilation with Qt 5.9

`QTimer::callOnTimeout()` only exists since Qt 5.12.

Connect to the `QTimer::timeout` signal instead, this works with older
versions as well and is equivalent according to the Qt documentation.
FIXED-IN: 3.3.2
Differential Revision: https://phabricator.kde.org/D29841

M  +1    -1    src/document.cpp

https://invent.kde.org/office/tellico/commit/ac8740fd9b4042af476fcf8dbb91c7d212d143e4
Comment 3 Robby Stephenson 2020-06-02 16:35:19 UTC
Git commit bcb4e181f37b8ef1d5fb684bf702f86cef2897ef by Robby Stephenson, on behalf of Wolfgang Bauer.
Committed on 02/06/2020 at 16:35.
Pushed by rstephenson into branch 'master'.

Fix compilation with Qt 5.9

`QTimer::callOnTimeout()` only exists since Qt 5.12.

Connect to the `QTimer::timeout` signal instead, this works with older
versions as well and is equivalent according to the Qt documentation.
FIXED-IN: 3.3.2
Differential Revision: https://phabricator.kde.org/D29841

M  +1    -1    src/document.cpp

https://invent.kde.org/office/tellico/commit/bcb4e181f37b8ef1d5fb684bf702f86cef2897ef