Fix compilation with Qt 5.9

`QTimer::callOnTimeout()` only exists since Qt 5.12.

Connect to the `QTimer::timeout` signal instead, this works with older
versions as well and is equivalent according to the Qt documentation.

BUG: 422354
FIXED-IN: 3.3.2
Differential Revision: https://phabricator.kde.org/D29841